fixed bio alignment, desktop media query bracket error and cms sub header italics

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,7 +262,7 @@ li .nav-contact {
 }
 
 .to-top a:link {
-  color: #2400B4;
+  color: #2400b4;
   text-decoration: none;
 }
 
@@ -294,7 +294,7 @@ h2 {
 h3 {
   /* CHANGE TO SERIF Oct 2020 */
   /*	font-family: 'IBM Plex Serif', serif;*/
-  font-family: 'IBM Plex Serif', serif;
+  font-family: "IBM Plex Serif", serif;
   font-size: 2.6rem;
   text-transform: capitalize;
 }
@@ -479,7 +479,7 @@ footer {
   /* background-color:#0e0d0dee; */
   /* 9.15.20 removed */
   /* background-color: #171a1a; */
-  background-color: #F4F2FB;
+  background-color: #f4f2fb;
 }
 
 /* .hero {
@@ -589,43 +589,34 @@ p {
 }
 
 .select-ux-projects {
- 
 }
 
 .blue-background {
   background-color: #ebe8f8;
-  border: #3F1FBD .2rem solid;
+  border: #3f1fbd 0.2rem solid;
   margin: 3rem auto;
   padding: 0 2rem;
   width: 37.5rem;
 }
 
-
-
-
-
-
-.favicon{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.favicon {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
-
-.project-link p{
+.project-link p {
   color: #600090;
   text-align: center;
 }
 
 .blue-background p {
   color: #302f3a;
- 
 }
 
 .blue-background h3 {
   /* font-weight: 700; */
-  letter-spacing: .4rem;
+  letter-spacing: 0.4rem;
   padding: 3rem 0;
   text-align: center;
 }
@@ -1345,8 +1336,8 @@ p {
 .bio-section-header {
   color: #290cdc;
   text-align: center;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
+  /* text-decoration: underline;
+  text-decoration-skip-ink: none; */
 }
 
 .content-two {
@@ -1475,7 +1466,7 @@ p {
 }
 
 .village-section-header {
-  color: #3F1FBD;
+  color: #3f1fbd;
   align-items: center;
   /* color: #285835; */
   display: flex;
@@ -1618,9 +1609,9 @@ p {
 }
 
 .village-section-thoughts {
-  color: #0E0B06;
+  color: #0e0b06;
   font-weight: 300;
-  letter-spacing: .3rem;
+  letter-spacing: 0.3rem;
   padding: 8rem 0;
   text-align: center;
   text-transform: uppercase;
@@ -1830,7 +1821,7 @@ p {
   padding: 2rem 0;
 }
 .cms-numbered-header {
-  color: #3F1FBD;
+  color: #3f1fbd;
   font-weight: 700;
   font-style: italic;
   text-align: center;
@@ -1861,7 +1852,7 @@ p {
   margin: 0 0 0 10px;
 } */
 #cms-case-study-title {
-  color: #0E0B06;
+  color: #0e0b06;
   padding: 2rem 0;
   text-align: center;
 }
@@ -1931,6 +1922,7 @@ p {
 .cms-sub-header {
   font-weight: 700;
   padding: 3rem 0 1rem;
+  font-style: italic;
 }
 
 .cms-wireframes {
@@ -3192,7 +3184,6 @@ nav-links {
   .hero-wrap {
     padding: 4rem 25rem;
     /* max-width: 170rem; */
-    
   }
 
   /* NEW 9.17.2020 */
@@ -3216,7 +3207,6 @@ nav-links {
   /* .blue-background img {
     display: block;
     margin: auto; */
-  }
 
   #introduction {
     font-size: 4.4rem;
@@ -3385,7 +3375,7 @@ nav-links {
 
   /* NEW 2020 BIO PADDING */
   .bio-content section {
-    padding: 5rem 10rem;
+    /* padding: 5rem 10rem; */
     margin: 0 auto;
   }
 
@@ -3398,21 +3388,6 @@ nav-links {
   #top-bio {
     max-width: 140rem;
   }
-
-  /* REMOVE BIO CONTENT to add 2020 Background COLOR */
-  /* .bio-content {
-        max-width: 85rem;
-    } */
-
-  /* OLD BIO HEADER FITTING */
-  /* 
-    .bunk {
-        margin-left: 24rem;
-    }
-
-    .bio-about-me-picture{
-        grid-gap: 10rem;
-    } */
 
   .bio-about-me-picture {
     align-items: center;
@@ -3592,6 +3567,15 @@ nav-links {
     max-width: 90rem;
     padding-left: 10rem;
     /*		padding: 4rem 0;*/
+  }
+
+  .village-wireframe-wrap {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .village-hifi-wireframe-mocks {
+    height: 80rem;
   }
 
   .village-section-heading {
